src/objects/Teller_Activity_Search__c.object
<CustomObject>
    <description>Teller Activity Search criteria for favorite searches</description>
    <fields>
        <fullName>Account_Credit__c</fullName>
        <label>Account (Credit)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Debit__c</fullName>
        <label>Account (Debit)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Image</fullName>
                </value>
                <value>
                    <fullName>Depository</fullName>
                </value>
                <value>
                    <fullName>Mandate</fullName>
                </value>
                <value>
                    <fullName>Transaction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_From__c</fullName>
        <label>Amount From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_To__c</fullName>
        <label>Amount To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Teller Activity Search</relationshipLabel>
        <relationshipName>Teller_Activity_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Branch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User current user&apos;s branch</description>
        <label>Current User Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use current user</description>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_From__c</fullName>
        <label>DateTime From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_To__c</fullName>
        <label>DateTime To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_By__c</fullName>
        <label>Sort By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activity_Amount__c</fullName>
                </value>
                <value>
                    <fullName>Activity_Currency__c</fullName>
                </value>
                <value>
                    <fullName>Activity_Date_Time__c</fullName>
                    <default>true</default>
                    <label>Activity_Date_Time__c</label>
                </value>
                <value>
                    <fullName>Activity_Description__c</fullName>
                </value>
                <value>
                    <fullName>Activity_Type__c</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Created_By_User__c</fullName>
                </value>
                <value>
                    <fullName>Status__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Descending</fullName>
                    <default>true</default>
                    <label>Descending</label>
                </value>
                <value>
                    <fullName>Ascending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Submitted for Authorisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Till__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Till</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Teller_Depository__c.Storage_Type__c</field>
                <operation>equals</operation>
                <value>Till</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Activity Search</relationshipLabel>
        <relationshipName>Teller_Activity_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Teller_Function__c.Teller_Group__r.Name</field>
                <operation>equals</operation>
                <value>Teller Transactions</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Teller_Function__c</referenceTo>
        <relationshipLabel>Teller Activity Search</relationshipLabel>
        <relationshipName>Teller_Activity_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Teller_Branch_Number__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Activity_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Teller Activity Search</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teller Activity Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teller Activity Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>